tests/fixtures/invalid/bool_bitand_set.py
# Cannot bitwise AND Bool and Set[int]
x: bool = True & {1, 2, 3}
